# nostr

crates/nostr/: Cargo.toml  README.md
crates/nostr-sdk/: Cargo.toml
crates/nostr-sdk-net/: Cargo.toml
crates/nostr-sdk-net/src/: error.rs  lib.rs  message.rs  web.rs
crates/nostr-sdk-net/src/native/: mod.rs
crates/nostr-sdk/src/relay/: mod.rs
crates/nostr/src/message/: subscription.rs
