[package]
name = "nostr-sdk-net"
version = "0.1.0"
edition = "2021"
description = "Nostr SDK Network library."
authors = ["Yuki Kishimoto <yukikishimoto@proton.me>"]
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords = ["nostr", "sdk", "rust"]

[features]
default = ["native"]
native = [
    "dep:tokio",
    "dep:tokio-rustls", 
    "dep:tokio-socks", 
    "dep:tokio-tungstenite",
    "dep:webpki-roots",
]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
thiserror = "1.0"
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", default-features = false, features = ["net", "time"], optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio-socks = { version = "0.5", optional = true }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-webpki-roots"], optional = true }
webpki-roots = { version = "0.22", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
futures-channel = "0.3"
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "CloseEvent", "Event", "ErrorEvent", "BinaryType", "Blob"] }
